--- a/initialpage/templates/index.html
+++ b/initialpage/templates/index.html
@@ -145,6 +145,28 @@
                 </div>
             </div>
         </fieldset>
+
+        <fieldset class="fieldset">
+            <table>
+                <tr>
+                    <td><h1 class="pacotetitle">Personalize</h1></td>
+                </tr>
+                <td>
+                    <p><b>Você poderá personalizar todos os serviços do seu casamento!</b></p>
+                    <p>Escolha entre uma variedade de opções para Buffet, Decoração, DJ + Banda, Fotografia e Vídeo, e Consultoria, adaptando cada detalhe de acordo com suas preferências e necessidades.</p>
+                </td>
+                <tr><td><br></td></tr><tr><td><br></td></tr>
+            </table>
+            <div id="separator">
+                <div class="precos">
+                    <div class="preco">????</div>
+                </div>
+                <div class="botao">
+                    <a href="{% url 'account:index' %}" class="stylebotao">Criar Conta</a>
+                </div>
+            </div>
+        </fieldset>
+        
     </div>
     <div class="container2">
         <div class="escrito">
