--- a/payment/templates/payment/index.html
+++ b/payment/templates/payment/index.html
@@ -39,6 +39,7 @@
                     <div id="payment">
                         <div class="line"></div>
                         <h1>Formas de Pagamento</h1>
+                        <b style=" font-size: 1.6em; text-align: center; display: flex; justify-content: center;">R$ 24.392,40</b>
                         <form id="payment-form">
                             <div>
                                 <h3>Forma de Pagamento:</h3>
